--- a/package.json
+++ b/package.json
@@ -5,25 +5,15 @@
   "main": "main",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server"
+    "clean": "rimraf dist/",
+    "start": "node server.js",
+    "server": "webpack-dev-server",
+    "build": "webpack --config webpack.build.js"
   },
   "dependencies": {
-    "@babel/core": "^7.10.5",
     "autoprefixer": "^9.8.5",
     "axios": "^0.19.2",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
-    "file-loader": "^6.0.0",
-    "less-loader": "^6.2.0",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "style-vw-loader": "^1.0.2",
-    "url-loader": "^4.1.0",
+    "vant": "^2.9.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
@@ -31,8 +21,24 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
     "eruda": "^2.3.3",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "inquirer": "^7.3.3",
+    "less-loader": "^6.2.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
+    "style-vw-loader": "^1.0.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
