--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf dist/",
     "start": "node server.js",
     "server": "webpack-dev-server",
-    "build": "webpack --config webpack.build.js"
+    "build": "webpack --config webpack.build.js -p"
   },
   "dependencies": {
     "autoprefixer": "^9.8.5",
