--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "clean": "rimraf dist/",
     "start": "node server.js",
     "server": "webpack-dev-server",
-    "build": "webpack --config webpack.build.js -p"
+    "build": "webpack --config webpack.build.js --colors"
   },
   "dependencies": {
+    "@babel/preset-es2015": "^7.0.0-beta.53",
     "autoprefixer": "^9.8.5",
     "axios": "^0.19.2",
+    "colors": "^1.4.0",
     "vant": "^2.9.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
@@ -21,12 +23,14 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
-    "babel-cli": "^6.26.0",
+    "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "eruda": "^2.3.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "inquirer": "^7.3.3",
@@ -38,9 +42,11 @@
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "style-vw-loader": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.9"
   }
 }
