--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "html-webpack-plugin": "^4.3.0",
     "inquirer": "^7.3.3",
     "less-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-px-to-viewport": "^1.1.1",
     "rimraf": "^3.0.2",
