--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^9.8.5",
     "axios": "^0.19.2",
     "colors": "^1.4.0",
+    "element-ui": "^2.13.2",
+    "sortablejs": "^1.10.2",
     "vant": "^2.9.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
